K8S/checkout-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: ghcr.io/dranzture/checkout-image:latest
      imagePullSecrets:
        - name: git-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
    - name: checkout-grpc
      protocol: TCP
      port: 666
      targetPort: 666
