K8S/kafka-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui-deployment
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080 # <- Rectify the port
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-clusterip-service
spec:
  selector: 
    app: kafka-ui
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080 # <- Rectify the port.
