K8S/orchestrator-serv-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchestrator-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchestrator-serv
  template:
    metadata:
      labels:
        app: orchestrator-serv
    spec:
      containers:
        - name: orchestrator
          image: ghcr.io/dranzture/orchestrator-image:latest
      imagePullSecrets:
        - name: git-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orchestrator-serv
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
