K8S/ingress-confluent-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /confluent-control-center
            pathType: Prefix
            backend:
              service:
                name: controlcenter-bootstrap-lb
                port:
                  number: 80
