K8S/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/security
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
          - path: /api/shoppingitem
            pathType: Prefix
            backend:
              service:
                name: orchestrator-clusterip-srv
                port:
                  number: 80
